# OpenNotes

./: Cargo.toml  README.md
public/: index.html  main.js  style.css
src/: commands.rs  ipfs.rs  main.rs  server.rs  setup.rs  startipfs.rs
